# dependapy

./: .gitignore  Justfile  LICENSE  Makefile  Makefile.new  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: QA.yml  release.yml
assets/docs/: CODE_QUALITY.md  POLICY.md  UV_GUIDE.md  uv_usage.md
dependapy/: __init__.py  analyzer.py  constants.py  github_api.py  main.py  offline_pr.py  updater.py
examples/: example_dependapy.yml  example_usage.py
tests/: __init__.py  test_analyzer.py  test_analyzer_fixed.py  test_comment_handling.py  test_dependapy.py  test_integration.py  test_main_sentinel.py  test_offline_pr.py  test_sentinel_pattern.py  test_updater.py
typings/: __init__.py  tomli.pyi  tomllib.pyi
